--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,17 +11,25 @@
     --white:#FFFFFF;
 }
 
+
+
+/*====================================
+ Beginning of header styles 
+ =====================================*/
 img
 {
     width:278px;
     height:100px;
 }
+
 header
 {
     display:flex;
     justify-content: space-between;
     align-items:center;
     background-color: var(--green);
+    /*position: fixed;*/
+    top:0;
 }
 .navbar a
 {
@@ -44,3 +52,57 @@ header
     font-size: 2em;
     margin-right:40px;
 }
+
+
+ /*====================================
+ Beginning of welcome section
+ =====================================*/
+ #grocery
+ {
+     width:100%;
+     height:691px;
+     background-image: url(../images/grocery\ site.jpg);
+     background-repeat: no-repeat;
+     background-size: cover;
+     background-position: center;
+     display:flex;
+     justify-content: center;
+     align-items: center;
+ }
+ .rectangle
+ {
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
+    border-radius:40px;
+    width:686px;
+    height:347px;
+    background-color: var(--green);
+ }
+ .rectangle h1
+ {
+    font-size: 41px;
+    color:white;
+    font-weight: bolder;
+    margin-bottom:20px;
+ }
+ .rectangle p
+ {
+    font-size:24px;
+    color:white;
+    font-weight:bold;
+ }
+ #Shoppers
+ {
+    color:var(--white);
+    background-color:var(--red);
+    box-shadow:3px 3px 3px grey;
+    border-radius:30px;
+    border:none;
+    width:253px;
+    height:60px;
+    font-size:32px;
+    font-weight: bold;
+    margin-top:40px;
+ }
