--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -115,6 +115,7 @@ header
     display:flex;
     justify-content: space-evenly;
 }
+
 .icons
 {
     display:flex;
@@ -136,3 +137,44 @@ header
     margin-bottom:50px;
 }
  /*------------End of icons------------------------*/
+
+ /*------------start of elipse circle--------------*/
+  .ellipse
+  {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+     width:43px;
+     height:43px;
+     border-radius:50%;
+     background-color:var(--yellow);
+     color:var(--green);
+  }
+  #dairys
+  {
+    display:flex;
+    justify-content: space-between;
+    padding-top:10vh;
+    align-items: center;
+    
+  }
+  .dairy
+  {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items:center;
+    font-size:2em; 
+    font-weight:bold;  
+}
+  
+  .dairy img
+  {
+     height:60px;
+     width:60px;
+     border-radius:50%;
+     margin-bottom:25px;
+  }
+  
+
+  /*------------End of elipse circle--------------*/
