--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -144,19 +144,19 @@ header
     display:flex;
     justify-content: center;
     align-items: center;
-     width:43px;
-     height:43px;
-     border-radius:50%;
-     background-color:var(--yellow);
-     color:var(--green);
+    float:left;
+    margin-top:60px;
+    margin-left:30px;
+    width:43px;
+    height:43px;
+    border-radius:50%;
+    background-color:var(--yellow);
+    color:var(--green);
   }
   #dairys
   {
     display:flex;
     justify-content: space-between;
-    padding-top:10vh;
-    align-items: center;
-    
   }
   .dairy
   {
@@ -165,16 +165,67 @@ header
     flex-direction: column;
     align-items:center;
     font-size:2em; 
-    font-weight:bold;  
+    font-weight: bold;  
 }
-  
-  .dairy img
-  {
+.dairy img
+{
      height:60px;
      width:60px;
      border-radius:50%;
-     margin-bottom:25px;
-  }
+}
   
 
   /*------------End of elipse circle--------------*/
+
+  /* ---------start brand--------------*/
+  #New-brands
+  {
+    font-size:2em;
+    color:var(--green);
+    font-weight: bolder;
+    margin-left:106px;
+    margin-top:80px;
+  }
+  .brand-container
+  {
+    display:flex;
+    justify-content: space-between;
+  }
+  #container
+  {
+    display:flex;
+    justify-content: space-evenly;
+    margin-top:40px;
+  }
+  .rectangles
+  {
+    display:flex;
+    height:103px;
+    width:288px;
+    background-color:var(--green);
+    border-radius:0px 10px 10px 0px;
+  }
+  #paragraph
+  {
+    font-size: 1.8em;
+  }
+  
+  .rectangles img
+  {
+    width:102px;
+    height:100%;
+  }
+  .rectangles div
+  {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left:15px;
+  }
+  .rectangles div p
+  {
+     font-size:larger;
+     font-weight: bolder;
+     color:white;
+  }
+  /*----------end of brand-------------*/
