--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -229,3 +229,65 @@ header
      color:white;
   }
   /*----------end of brand-------------*/
+
+  /*----------Start of Trending Products------*/
+   .card-container
+   {
+    display: flex;
+    justify-content: space-evenly;
+   }
+  
+    .trending-products
+    {
+      font-size: 2em;
+      font-weight: bold;
+      color:var(--green);
+      margin-left:60px;
+      margin-top:50px;
+      margin-bottom:300px;
+    }
+  
+    .card-rectangle
+    {
+      width:170px;
+      height:212px;
+      background-color: var(--green);
+      border-radius: 10px 10px 10px 10px;
+      margin-top:20px;
+    }
+    .card-rectangle img
+    {
+      width:100%;
+      height:109px;
+      border-radius:10px 10px 0px 0px;
+    }
+    #Tomato
+    {
+      color:var(--white);
+      font-weight: bold;
+      margin-left:15px;
+      font-size:20px;
+    }
+    #quantity
+    {
+      color:var(--white);
+      font-weight:normal;
+      margin-left:15px;
+      font-size:15px;
+    }
+    .card-rectangle p i
+    {
+      color:var(--yellow);
+      font-size:7px;
+      margin-left:10px;
+    }
+    #price
+    {
+      color:var(--white);
+      font-size:large;
+      font-weight: bold;
+      margin-left:15px;
+    }
+
+
+   /*----------End of Trending Products------*/
