--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -173,8 +173,6 @@ header
      width:60px;
      border-radius:50%;
 }
-  
-
   /*------------End of elipse circle--------------*/
 
   /* ---------start brand--------------*/
@@ -287,7 +285,71 @@ header
       font-size:large;
       font-weight: bold;
       margin-left:15px;
+    } 
+    /*----------End of Trending Products------*/
+
+    /*----------Start of footer--------------*/
+    #grocery-shop
+    {
+      display:flex;
+      justify-content: space-between;
+      background-color: var(--green);
+      width:100%;
+    }
+    .footer-logo
+    {
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      width:20%;
+      height:100%;
+    }
+    .footer-logo img
+    {
+       width:100%;
+       height:60%;
+    }
+    .quick-links
+    {
+      width:16%;
+      padding:10px;
+      font-weight: bold;
+      color:white;
+    }
+    .quick-links p
+    {
+       font-size:30px;
+       margin-bottom:20px;
+    }
+    .quick-links hr
+    {
+       border-color:black;
+       width:60%;
     }
 
-
-   /*----------End of Trending Products------*/
+    .quick-links a
+    {
+      display:block;
+      margin:10px;
+      color:var(--yellow);
+      text-decoration: none;
+      font-size:1.3em;
+    }
+  
+   .location
+   {
+     width:30% !important;
+   }
+   .address
+   {
+     color:var(--yellow);
+     margin:10px !important;
+     font-size:1.3em !important;
+   }
+   .location img
+   {
+     width:90%;
+     height:15vh;
+     border-radius: 25px;
+   }
+    /*----------End of footer--------------*/
