--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,2 +1,97 @@
+*
+{
+    margin:0px;
+    padding:0px;
+}
+:root
+{
+    --green:#50C878;
+    --red:#F70B0B;
+    --yellow:#FFDF00;
+    --white:#FFFFFF;
+}
+.login
+{
+    display: flex;
+    width:100%;
+    height:100vh;
+    background-color: var(--green);
+}
+.yellow-box
+{
+    width:50vw;
+    height:100%;
+    background-color:var(--yellow);
+    border-radius:0px 100px 0px 0px;
+}
+.yellow-box h1
+{
+    text-align: center;
+    margin-top:30px;
+    color:var(--white);
+    font-size: 4em;
+}
+#details
+{
+   text-align: center; 
+   margin-top:10px;
+   color:var(--white);
+   font-size:2em;
+   font-weight: bold;
+}
+form input
+{
+    display: block;
+    margin-top:60px;
+    margin-bottom:80px;
+    padding-bottom:40px;
+    border:none;
+    border-bottom: 4px solid var(--green);
+    background-color:var(--yellow);
+    color:var(--green);
+    font-size:2em;
+    width:90%;
+    margin-left:auto;
+    margin-right: auto;
+    font-weight: bold;
+}
+form input::placeholder
+{
+    color:var(--green);
+}
+#Logins
+{
+    display:block;
+    width:35%;
+    padding-top:5px;
+    padding-bottom:5px;
+    border-radius:50px;
+    background-color: var(--red);
+    color:var(--white);
+    font-size:4em;
+    font-weight: bold;
+    margin-left:auto;
+    margin-right:auto;
+}
 
 
+.container
+{
+    height:100vh;
+    width:50%;
+    position: relative;
+}
+#walmart
+{
+    position:absolute;
+    right:60px;
+    top:15px;
+}
+#desktop
+{
+    position:absolute;
+    bottom:0;
+    width: 90%;
+    left: 5%;
+    right:5%;
+}
